<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="collapsing_image_content_description" translatable="false">Background Image</string>
    <string name="tv_weather_status" translatable="false">Snowy</string>
    <string name="tv_weather_location" translatable="false">Vkhoyansk, Rusia</string>
    <string name="tv_weather_degree" translatable="false">-12</string>
    <string name="vp_content_description" translatable="false">Weather Info</string>
    <string name="tl_content_description" translatable="false">Weather Info Tabs</string>
    <string name="favorites" translatable="false">Favorites</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="clouds">Clouds</string>
    <string name="add_a_location">Add a Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>

    <string name="tv_user_initial_settings_explanation">The following extra few steps are needed to setup the app correctly. \nRemember, you can always change them later.</string>
    <string name="user_initial_settings_title">Just a few more steps...</string>
    <string name="tv_user_initial_settings_location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_per_sec">meter/sec</string>
    <string name="miles_per_hour">miles/hour</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="done">Done</string>
    <string name="unable_to_find_location_error_message">Unable to find your location</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key" translatable="false">AIzaSyDdoZKqqKdQXhmepwtlyYfvqMN2lRO-nBU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unable_to_find_a_location">Unable to find a location</string>
    <string name="open_up_the_map">Open Up The Map</string>
    <string name="pin">Pin</string>
    <string name="favorite">Favorite</string>
    <string name="dismiss">Dismiss</string>
    <string name="today">Today</string>
    <string name="remove">Remove</string>
    <string name="alert_dialog_location_removal_title">Remove this location</string>
    <string name="alert_dialog_location_removal_message">Are you sure you want to remove this location ?</string>
    <string name="cancel">cancel</string>
    <string name="no_internet_message">You\'re not connected to the internet</string>
    <string name="alerts">Alerts</string>
    <string name="turn_off">TURN OFF</string>
</resources>