<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.mainapp.BottomNavigationSheetFragment">


        <Button
            android:id="@+id/btn_bottom_navigation_sheet_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_pin_40px_w400"
            android:drawableTint="#4A89F3"
            android:text="@string/pin"
            android:textColor="#4A89F3"
            android:textSize="16sp"
            android:paddingVertical="14dp"
            android:paddingStart="30dp"
            android:fontFamily="@font/noto_sans_sc_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_bottom_navigation_sheet_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_favorite_40px_w300"
            android:drawableTint="#FF647F"
            android:text="@string/favorite"
            android:textColor="#FF647F"
            android:textSize="16sp"
            android:paddingVertical="14dp"
            android:paddingStart="30dp"
            android:fontFamily="@font/noto_sans_sc_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_bottom_navigation_sheet_pin" />


        <Button
            android:id="@+id/btn_bottom_navigation_sheet_dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/ic_close_40px_w300"
            android:drawableTint="@color/red_shade_2"
            android:text="@string/dismiss"
            android:textColor="@color/red_shade_2"
            android:textSize="16sp"
            android:paddingVertical="14dp"
            android:paddingLeft="30dp"
            android:fontFamily="@font/noto_sans_sc_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_bottom_navigation_sheet_favorite" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>