<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hourlyForecastAdapter"
            type="com.example.weatherapp.ui.adapter.HourlyForecastAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DetailsFragment"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_current_hourly_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adapter="@{hourlyForecastAdapter}"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/rv_current_hourly_forecast"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="18sp"
                    android:textColor="@color/dark_grey"
                    android:paddingLeft="16dp"
                    android:paddingVertical="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_humidity_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="81%"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/noto_sans_sc_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_humidity"
                    app:layout_constraintBottom_toBottomOf="@id/tv_humidity" />


                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="18sp"
                    android:textColor="@color/dark_grey"
                    android:paddingVertical="24dp"
                    android:paddingLeft="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_humidity" />


                <TextView
                    android:id="@+id/tv_pressure_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="81%"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/noto_sans_sc_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/tv_humidity_value"
                    app:layout_constraintTop_toTopOf="@id/tv_pressure"
                    app:layout_constraintBottom_toBottomOf="@id/tv_pressure"
                    app:layout_constraintTop_toBottomOf="@id/tv_humidity_value" />


                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textSize="18sp"
                    android:textColor="@color/dark_grey"
                    android:paddingVertical="24dp"
                    android:paddingLeft="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_pressure" />


                <TextView
                    android:id="@+id/tv_wind_speed_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="81 mile/hour"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/noto_sans_sc_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/tv_pressure_value"
                    app:layout_constraintTop_toTopOf="@id/tv_wind_speed"
                    app:layout_constraintBottom_toBottomOf="@id/tv_wind_speed"
                    app:layout_constraintTop_toBottomOf="@id/tv_pressure_value" />


                <TextView
                    android:id="@+id/tv_clouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clouds"
                    android:textSize="18sp"
                    android:textColor="@color/dark_grey"
                    android:paddingVertical="24dp"
                    android:paddingLeft="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_wind_speed" />


                <TextView
                    android:id="@+id/tv_clouds_value"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="81%"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/noto_sans_sc_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/tv_pressure_value"
                    app:layout_constraintTop_toTopOf="@id/tv_clouds"
                    app:layout_constraintBottom_toBottomOf="@id/tv_clouds"
                    app:layout_constraintTop_toBottomOf="@id/tv_wind_speed_value" />







            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>