<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.weatherapp.viewmodel.WeatherInfoViewModel" />
    </data>
<!--
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.MainFragment">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp">


                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    app:titleEnabled="false"
                    app:contentScrim="@color/white_97_brightness"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_collapsing_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/collapsing_image_content_description"
                            android:scaleType="fitXY"
                            app:layout_collapseMode="parallax"
                            app:layout_collapseParallaxMultiplier="0.7" />


                        <TextView
                            android:id="@+id/tv_weather_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans_sc_bold"
                            android:text="@{viewmodel.weatherOneCallResponse.currentWeatherDetailedInfo.component7() .get(0).main}"
                            android:textSize="32sp"
                            android:textColor="@color/white_97_brightness"
                            android:includeFontPadding="false"
                            android:layout_marginTop="62dp"
                            app:layout_constraintStart_toStartOf="@id/tv_weather_location"
                            app:layout_constraintEnd_toEndOf="@id/tv_weather_location"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/tv_weather_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans_sc_medium"
                            android:text="@{viewmodel.weatherOneCallResponse.timezone}"
                            android:textColor="@color/white_97_brightness"
                            android:textSize="23sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_weather_status" />

                        <TextView
                            android:id="@+id/tv_weather_degree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_bold"
                            android:text="@string/tv_weather_degree"
                            android:textSize="82sp"
                            android:textColor="@color/white_97_brightness"
                            app:layout_constraintStart_toStartOf="@id/tv_weather_location"
                            app:layout_constraintEnd_toEndOf="@id/tv_weather_location"
                            app:layout_constraintTop_toBottomOf="@id/tv_weather_location" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        android:layout_marginTop="16dp" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tab_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/tl_content_description"
                        android:layout_gravity="bottom"
                        app:tabIndicatorColor="@color/grey"
                        app:tabIndicatorFullWidth="false"
                        app:tabRippleColor="@color/white_80_brightness"
                        app:tabSelectedTextColor="@color/black"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:contentDescription="@string/vp_content_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>


       <!-- <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/main_menu_items"
            app:itemVerticalPadding="18dp" />


    </androidx.drawerlayout.widget.DrawerLayout>-->
</layout>